# frXAS.py

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  README.md  conda_env.txt  conf.py  environment.yml  environment2.yml  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  examples.rst  hdf5_io.rst  index.rst  models.rst  time_domain.rst  visualization.rst
docs/source/examples/: model_fitting_example.ipynb  signal_fitting_example.ipynb
frxas/: __init__.py  datain.py  datain2.py  frXAS_Analysis.py  hdf5_io.py  models.py  preprocessing.py  time_domain.py  visualization.py
frxas/tests/: test_models.py  test_visualization.py
tests/: test_models.py  test_visualization.py
