[tool.poetry]
name = "frxas"
version = "0.1.0"
description = "A Python package to work with data from frequency-resolved X-ray absorption spectroscopy measurements."
authors = ["Brian Gerwe <brian.s.gerwe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<3.11"
lmfit = "^1.1.0"
matplotlib = "^3.7.0"
h5py = "^3.8.0"
scipy = "^1.10.1"
numpy = "^1.24.2"


[tool.poetry.group.development.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
jupyterlab = "^3.6.1"


[tool.poetry.group.build.dependencies]
numpydoc = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
